[package]
name = "chapter-up-and-running"
version = "0.1.0"
authors = ["Kan-Ru Chen <kanru@kanru.info>"]
edition = "2018"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bastion = "0.4.4"
tide = "0.16.0"
serde = { version = "1.0.124", features = ["derive"] }
anyhow = "1.0.38"
tracing = "0.1"
tracing-subscriber = "0.2.0"
